# Nixos-Gui

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  result  shell.nix  svelte.config.js  tsconfig.json
.github/workflows/: main.yml.txt
src/: configuration.nix  hooks.js  main.rs
src-tauri/: .gitignore  Cargo.toml  result  tauri.conf.json
src-tauri/src/: main.rs  nix_env.rs  worker.rs
src/components/: Channels.svelte  Compare.svelte  Denied.svelte  Generations.svelte  Option.svelte  Package.svelte  ProgressBar.svelte  Search.svelte  SubMenus.svelte  TopBar.svelte
src/components/icons/: Back.svelte  CartIcon.svelte  CheckIcon.svelte  DownloadIcon.svelte  Home.svelte  SaveSettingsIcon.svelte
src/components/types/: AttributeSetType.svelte  BooleanType.svelte  Default.svelte  ListType.svelte  OneOfType.svelte  OrType.svelte  StringType.svelte
src/routes/: OptionEdit.svelte  index.svelte
src/screens/: OptionsScreen.svelte  PackagesScreen.svelte  SystemScreen.svelte
src/store/: store.ts
src/utils/: globalFunctions.ts
static/: ast.json  configuration.nix  packagesList2.json  types.json  worker.js
static/pkg_icons/: build.json
usr/share/applications/: nixos-gui.desktop
