[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "^1.0.59"
rocket = {version = "0.5.0-rc.1",features = ["json"]}

[dependencies.rnix]
git = "https://github.com/celestialme/rnix-parser"
features = [ "serde1" ]